building up begginer angular app.

--- a/angular.json
+++ b/angular.json
@@ -7,8 +7,6 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "inlineTemplate": true,
-          "inlineStyle": true,
           "style": "scss"
         }
       },
@@ -100,5 +98,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "be8255df-2772-4c36-8404-db60a8b9e3c9"
   }
 }
